--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,27 @@
 <header class="site-header">
 	<div class="wrapper">
-		<a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+		<a class="site-title" href="{{ site.baseurl }}/" title="{{ site.title }}">{{ site.title }}</a>
 		<nav class="site-nav">
+			{% assign sorted_pages = (site.pages | where: 'nav', true | where: 'lang', page.lang | sort: 'position') %}
+			{% for p in sorted_pages %}
+				{% if page.title %}
+					<a class="page-link{% if page.title == p.title %} current{% endif %}" href="{{ p.url | prepend: site.baseurl }}" title="{{ p.title }}">{{ p.title }}</a>
+				{% endif %}
+			{% endfor %}
+		</nav>
+		<nav id="language" class="lang">
+			{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
+			{% for p in lang_pages %}
+				{% if p.label %}
+					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %}><abbr lang="{{ p.lang }}" title="{{ p.title }}">{{ p.lang }}</abbr></a>
+				{% endif %}
+			{% endfor %}
+			{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
+			{% for p in lang_posts %}
+				{% if p.label %}
+					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %}><abbr lang="{{ p.lang }}" title="{{ p.title }}">{{ p.lang }}</abbr></a>
+				{% endif %}
+			{% endfor %}
 		</nav>
 	</div>
 </header>
