Add alternative language links in the head
Provides information to search engines about alternate versions of a document,
written in another human language.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,16 @@
 	<meta name="description" content="{{ site.description }}">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
+	{% for p in lang_pages %}
+		{% if p.label and p.lang != page.lang %}
+			<link rel="alternate" href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}" />
+		{% endif %}
+	{% endfor %}
+	{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
+	{% for p in lang_posts %}
+		{% if p.label and p.lang != page.lang %}
+			<link rel="alternate" href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}" />
+		{% endif %}
+	{% endfor %}
 </head>
