Add locale support
Allows the localization of strings, like the site's title or description. The
home URL can also be localized. The head title contains both the page and site
titles.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 				</ul>
 			</div>
 			<div class="footer-col  footer-col-3">
-				<p class="text">{{ site.description }}</p>
+				<p class="text">{% if site.locales[page.lang].description %}{{ site.locales[page.lang].description }}{% else %}{{ site.description }}{% endif %}</p>
 			</div>
 		</div>
 	</div>
