Fix incorrect feed in home layout
Now the displayed feed in home is the first of all available feeds sorted by
category. This means that the one without categories will be the one displayed.

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
 			</li>
 		{% endfor %}
 	</ul>
-	{% assign rss_pages = (site.pages | where: 'layout', 'feed' | where: 'lang', page.lang) %}
+	{% assign rss_pages = (site.pages | where: 'layout', 'feed' | where: 'lang', page.lang | sort: 'categories') %}
 	{% for page in rss_pages limit:1 %}
 		<p class="rss-subscribe">subscribe <a href="{{ page.url | prepend: site.baseurl }}" title="{{ page.title }}">via RSS</a></p>
 	{% endfor %}
