--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,13 @@
 			{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
 			{% for p in lang_pages %}
 				{% if p.label %}
-					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %}><abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr></a>
+					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}"><abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr></a>
 				{% endif %}
 			{% endfor %}
 			{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
 			{% for p in lang_posts %}
 				{% if p.label %}
-					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %}><abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr></a>
+					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}"><abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr></a>
 				{% endif %}
 			{% endfor %}
 		</nav>
