--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@ layout: default
 		{% assign lang_posts = (site.posts | where: 'lang', page.lang) %}
 		{% for post in lang_posts %}
 			<li>
-				<span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+				<span class="post-meta">{% include date.html date=post.date format="%b %-d, %Y" %}</span>
 				<h2>
 					<a class="post-link" href="{{ post.url | prepend: site.baseurl }}" title="{{ post.title }}">{{ post.title }}</a>
 				</h2>
