--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,8 @@ layout: default
 		{% assign lang_posts = (site.posts | where: 'lang', page.lang) %}
 		{% for post in lang_posts %}
 			<li>
-				<span class="post-meta">{% include date.html date=post.date format="%b %-d, %Y" %}</span>
+				{% capture complete_date_format %}{{ site.locales[page.lang].date.complete_format }}{% endcapture %}
+				<span class="post-meta">{% include date.html date=post.date format=complete_date_format %}</span>
 				<h2>
 					<a class="post-link" href="{{ post.url | prepend: site.baseurl }}" title="{{ post.title }}">{{ post.title }}</a>
 				</h2>
