Add translation for weekday abbreviated name in date.html
If a translation is not found the weekday abbreviated name is rendered in the
default liquid language (English).

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -40,6 +40,10 @@
 {% if weekday_name != "" %}
 	{% capture format %}{{ format | replace: "%A", weekday_name }}{% endcapture %}
 {% endif %}
+{% capture abbr_weekday_name %}{{ site.locales[page.lang].date.abbr_weekday_names[weekday_index] }}{% endcapture %}
+{% if abbr_weekday_name != "" %}
+	{% capture format %}{{ format | replace: "%a", abbr_weekday_name }}{% endcapture %}
+{% endif %}
 
 {% capture month %}{{ include.date | date: "%-m" }}{% endcapture %}
 {% assign month_index = month | minus: 1 %}
