Add translation for %c in date.html
Replacing "%c" with "%a %b %-d %T %Y" ensures that the weekday and month
abbreviations are translated.

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -32,7 +32,7 @@
 
 {% endcomment %}
 
-{% capture format %}{{ include.format }}{% endcapture %}
+{% capture format %}{{ include.format | replace: "%c", "%a %b %-d %T %Y" }}{% endcapture %}
 
 {% capture weekday %}{{ include.date | date: "%w" }}{% endcapture %}
 {% assign weekday_index = weekday | times: 1 %}
