Add capitalize option for date.html
Allows for a date to be capitalized automatically.

--- a/_includes/date.html
+++ b/_includes/date.html
@@ -56,4 +56,8 @@
 	{% capture format %}{{ format | replace: "%b", abbr_month_name }}{% endcapture %}
 {% endif %}
 
+{% if include.capitalize %}
+{{ include.date | date: format | capitalize }}
+{% else %}
 {{ include.date | date: format }}
+{% endif %}
