--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -17,6 +17,6 @@ layout: default
 	</ul>
 	{% assign rss_pages = (site.pages | where: 'layout', 'feed' | where: 'lang', page.lang | sort: 'categories') %}
 	{% for page in rss_pages limit:1 %}
-		<p class="rss-subscribe">subscribe <a href="{{ page.url | prepend: site.baseurl }}" title="{{ page.title }}">via RSS</a></p>
+		<p class="rss-subscribe"><a href="{{ page.url | prepend: site.baseurl }}" title="{{ page.title }}">{{ site.locales[page.lang].rss_subscribe }}</a></p>
 	{% endfor %}
 </div>
