--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>{% if page.title %}{{ page.title }} - {% endif %}{% if site.locales[page.lang].title %}{{ site.locales[page.lang].title }}{% else %}{{ site.title }}{% endif %}</title>
 	<meta name="description" content="{% if site.locales[page.lang].description %}{{ site.locales[page.lang].description }}{% else %}{{ site.description }}{% endif %}">
+	<meta name="generator" content="Jekyll v{{ jekyll.version }}">
 	<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 	{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
