--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,13 @@
 				</ul>
 			</div>
 			<div class="footer-col  footer-col-3">
-				<p class="text">{% if site.locales[page.lang].description %}{{ site.locales[page.lang].description }}{% else %}{{ site.description }}{% endif %}</p>
+				<p class="text">
+					{% if site.locales[page.lang].description %}
+						{{ site.locales[page.lang].description }}
+					{% else %}
+						{{ site.description }}
+					{% endif %}
+				</p>
 			</div>
 		</div>
 	</div>
