--- a/_layouts/compress.html
+++ b/_layouts/compress.html
@@ -5,6 +5,6 @@
 {% if temp3.size == 2 %}
 <pre>{{ temp3.first | newline_to_br }}</pre>
 {% endif %}
-{{ temp3.last | split: ' ' | join: ' ' }}
+{{ temp3.last | split: ' ' | join: ' ' | replace: ' <', '<' | replace: '> ', '>' }}
 {% endfor %}
 {% endcapture %}{{ compress | strip_newlines }}
