--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="home">
-	<h1 class="page-heading">Posts</h1>
+	{{ content }}
 	<ul class="post-list">
 		{% assign lang_posts = (site.posts | where: 'lang', page.lang) %}
 		{% for post in lang_posts %}
