--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -1,75 +1,99 @@
+// Colors
+$black: #000;
+$red: #a00;
+$grey-lighter: #aaa;
+$grey-light: #999;
+$grey: #888;
+$grey-dark: #555;
+$pink-lighter: #fdd;
+$pink-light: #faa;
+$green-lighter: #dfd;
+$green-light: #afa;
+
+// Monokai colors
+$monokai-grey-dark: #1a1b19;
+$monokai-white: #f8f8f2;
+$monokai-brown-light: #75715e;
+$monokai-pink-vivid: #960050;
+$monokai-pink-vivid-alt: #f92672;
+$monokai-purple-dark: #1e0010;
+$monokai-blue-light: #66d9ef;
+$monokai-purple-light: #ae81ff;
+$monokai-yellow-light: #e6db74;
+$monokai-green-vivid: #a6e22e;
+
 // Syntax highlighting styles
 .highlight {
-	background: #1a1b19;
-	color: #f8f8f2;
+	background: $monokai-grey-dark;
+	color: $monokai-white;
 	@extend %vertical-rhythm;
 
-	.c     { color: #75715e; font-style: italic } // Comment
-	.err   { color: #960050; background-color: #1e0010 } // Error
-	.k     { color: #66d9ef; font-weight: bold } // Keyword
-	.l     { color: #ae81ff; font-weight: bold } // Literal
-	.n     { color: #f8f8f2; font-weight: bold } // Name
-	.o     { color: #f92672; font-weight: bold } // Operator
-	.p     { color: #f8f8f2; font-weight: bold } // Punctuation
-	.cm    { color: #75715e; font-style: italic } // Comment.Multiline
-	.cp    { color: #75715e; font-weight: bold } // Comment.Preproc
-	.c1    { color: #75715e; font-style: italic } // Comment.Single
-	.cs    { color: #75715e; font-weight: bold; font-style: italic } // Comment.Special
-	.gd    { color: #000; background-color: #fdd } // Generic.Deleted
-	.gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+	.c     { color: $monokai-brown-light; font-style: italic } // Comment
+	.err   { color: $monokai-pink-vivid; background-color: $monokai-purple-dark } // Error
+	.k     { color: $monokai-blue-light; font-weight: bold } // Keyword
+	.l     { color: $monokai-purple-light; font-weight: bold } // Literal
+	.n     { color: $monokai-white; font-weight: bold } // Name
+	.o     { color: $monokai-pink-vivid-alt; font-weight: bold } // Operator
+	.p     { color: $monokai-white; font-weight: bold } // Punctuation
+	.cm    { color: $monokai-brown-light; font-style: italic } // Comment.Multiline
+	.cp    { color: $monokai-brown-light; font-weight: bold } // Comment.Preproc
+	.c1    { color: $monokai-brown-light; font-style: italic } // Comment.Single
+	.cs    { color: $monokai-brown-light; font-weight: bold; font-style: italic } // Comment.Special
+	.gd    { color: $black; background-color: $pink-lighter } // Generic.Deleted
+	.gd .x { color: $black; background-color: $pink-light } // Generic.Deleted.Specific
 	.ge    { font-style: italic } // Generic.Emph
-	.gr    { color: #a00 } // Generic.Error
-	.gh    { color: #999 } // Generic.Heading
-	.gi    { color: #000; background-color: #dfd } // Generic.Inserted
-	.gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-	.go    { color: #888 } // Generic.Output
-	.gp    { color: #555 } // Generic.Prompt
+	.gr    { color: $red } // Generic.Error
+	.gh    { color: $grey-light } // Generic.Heading
+	.gi    { color: $black; background-color: $green-lighter } // Generic.Inserted
+	.gi .x { color: $black; background-color: $green-light } // Generic.Inserted.Specific
+	.go    { color: $grey } // Generic.Output
+	.gp    { color: $grey-dark } // Generic.Prompt
 	.gs    { font-weight: bold } // Generic.Strong
-	.gu    { color: #aaa } // Generic.Subheading
-	.gt    { color: #a00 } // Generic.Traceback
-	.kc    { color: #66d9ef; font-weight: bold } // Keyword.Constant
-	.kd    { color: #66d9ef; font-weight: bold } // Keyword.Declaration
-	.kn    { color: #f92672; font-weight: bold } // Keyword.Namespace
-	.kp    { color: #66d9ef; font-weight: bold } // Keyword.Pseudo
-	.kr    { color: #66d9ef; font-weight: bold } // Keyword.Reserved
-	.kt    { color: #66d9ef; font-weight: bold } // Keyword.Type
-	.ld    { color: #e6db74 } // Literal.Date
-	.m     { color: #ae81ff } // Literal.Number
-	.s     { color: #e6db74 } // Literal.String
-	.na    { color: #a6e22e } // Name.Attribute
-	.nb    { color: #f8f8f2 } // Name.Builtin
-	.nc    { color: #a6e22e; font-weight: bold } // Name.Class
-	.no    { color: #66d9ef } // Name.Constant
-	.nd    { color: #a6e22e } // Name.Decorator
-	.ni    { color: #f8f8f2 } // Name.Entity
-	.ne    { color: #a6e22e; font-weight: bold } // Name.Exception
-	.nf    { color: #a6e22e; font-weight: bold } // Name.Function
-	.nl    { color: #f8f8f2 } // Name.Label
-	.nn    { color: #f8f8f2 } // Name.Namespace
-	.nx    { color: #a6e22e } // Name.Other
-	.py    { color: #f8f8f2 } // Name.Property
-	.nt    { color: #f92672 } // Name.Tag
-	.nv    { color: #f8f8f2 } // Name.Variable
-	.ow    { color: #f92672; font-weight: bold } // Operator.Word
-	.w     { color: #f8f8f2 } // Text.Whitespace
-	.mf    { color: #ae81ff } // Literal.Number.Float
-	.mh    { color: #ae81ff } // Literal.Number.Hex
-	.mi    { color: #ae81ff } // Literal.Number.Integer
-	.mo    { color: #ae81ff } // Literal.Number.Oct
-	.sb    { color: #e6db74 } // Literal.String.Backtick
-	.sc    { color: #e6db74 } // Literal.String.Char
-	.sd    { color: #e6db74 } // Literal.String.Doc
-	.s2    { color: #e6db74 } // Literal.String.Double
-	.se    { color: #ae81ff } // Literal.String.Escape
-	.sh    { color: #e6db74 } // Literal.String.Heredoc
-	.si    { color: #e6db74 } // Literal.String.Interpol
-	.sx    { color: #e6db74 } // Literal.String.Other
-	.sr    { color: #e6db74 } // Literal.String.Regex
-	.s1    { color: #e6db74 } // Literal.String.Single
-	.ss    { color: #e6db74 } // Literal.String.Symbol
-	.bp    { color: #f8f8f2 } // Name.Builtin.Pseudo
-	.vc    { color: #f8f8f2 } // Name.Variable.Class
-	.vg    { color: #f8f8f2 } // Name.Variable.Global
-	.vi    { color: #f8f8f2 } // Name.Variable.Instance
-	.il    { color: #ae81ff } // Literal.Number.Integer.Long
+	.gu    { color: $grey-lighter } // Generic.Subheading
+	.gt    { color: $red } // Generic.Traceback
+	.kc    { color: $monokai-blue-light; font-weight: bold } // Keyword.Constant
+	.kd    { color: $monokai-blue-light; font-weight: bold } // Keyword.Declaration
+	.kn    { color: $monokai-pink-vivid-alt; font-weight: bold } // Keyword.Namespace
+	.kp    { color: $monokai-blue-light; font-weight: bold } // Keyword.Pseudo
+	.kr    { color: $monokai-blue-light; font-weight: bold } // Keyword.Reserved
+	.kt    { color: $monokai-blue-light; font-weight: bold } // Keyword.Type
+	.ld    { color: $monokai-yellow-light } // Literal.Date
+	.m     { color: $monokai-purple-light } // Literal.Number
+	.s     { color: $monokai-yellow-light } // Literal.String
+	.na    { color: $monokai-green-vivid } // Name.Attribute
+	.nb    { color: $monokai-white } // Name.Builtin
+	.nc    { color: $monokai-green-vivid; font-weight: bold } // Name.Class
+	.no    { color: $monokai-blue-light } // Name.Constant
+	.nd    { color: $monokai-green-vivid } // Name.Decorator
+	.ni    { color: $monokai-white } // Name.Entity
+	.ne    { color: $monokai-green-vivid; font-weight: bold } // Name.Exception
+	.nf    { color: $monokai-green-vivid; font-weight: bold } // Name.Function
+	.nl    { color: $monokai-white } // Name.Label
+	.nn    { color: $monokai-white } // Name.Namespace
+	.nx    { color: $monokai-green-vivid } // Name.Other
+	.py    { color: $monokai-white } // Name.Property
+	.nt    { color: $monokai-pink-vivid-alt } // Name.Tag
+	.nv    { color: $monokai-white } // Name.Variable
+	.ow    { color: $monokai-pink-vivid-alt; font-weight: bold } // Operator.Word
+	.w     { color: $monokai-white } // Text.Whitespace
+	.mf    { color: $monokai-purple-light } // Literal.Number.Float
+	.mh    { color: $monokai-purple-light } // Literal.Number.Hex
+	.mi    { color: $monokai-purple-light } // Literal.Number.Integer
+	.mo    { color: $monokai-purple-light } // Literal.Number.Oct
+	.sb    { color: $monokai-yellow-light } // Literal.String.Backtick
+	.sc    { color: $monokai-yellow-light } // Literal.String.Char
+	.sd    { color: $monokai-yellow-light } // Literal.String.Doc
+	.s2    { color: $monokai-yellow-light } // Literal.String.Double
+	.se    { color: $monokai-purple-light } // Literal.String.Escape
+	.sh    { color: $monokai-yellow-light } // Literal.String.Heredoc
+	.si    { color: $monokai-yellow-light } // Literal.String.Interpol
+	.sx    { color: $monokai-yellow-light } // Literal.String.Other
+	.sr    { color: $monokai-yellow-light } // Literal.String.Regex
+	.s1    { color: $monokai-yellow-light } // Literal.String.Single
+	.ss    { color: $monokai-yellow-light } // Literal.String.Symbol
+	.bp    { color: $monokai-white } // Name.Builtin.Pseudo
+	.vc    { color: $monokai-white } // Name.Variable.Class
+	.vg    { color: $monokai-white } // Name.Variable.Global
+	.vi    { color: $monokai-white } // Name.Variable.Instance
+	.il    { color: $monokai-purple-light } // Literal.Number.Integer.Long
 }
