--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -7,5 +7,7 @@ nav {
 
 // Code blocks
 .highlight {
-	@extend %vertical-rhythm;
+	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
+	border-radius: $spacing-unit / 12;
+	margin: $spacing-unit / 12;
 }
