Add Polymer CDN and import webcomponent.js
I'll be using polymer to bring Material Design into the theme. More information
about the Polymer project in https://www.polymer-project.org.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -32,4 +32,5 @@
 	{% for p in rss_pages %}
 		<link rel="alternate" type="application/rss+xml" title="{{ p.title }}" href="{{ p.url | prepend: site.baseurl | prepend: site.url }}" />
 	{% endfor %}
+	{% include polymer.html %}
 </head>
