Add core-header-panel as base structure
This element contains two sections:
- Header section.
- Content panel.

For more information see
https://www.polymer-project.org/0.5/docs/elements/core-header-panel.html.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,3 +1,19 @@
+// Body
+html, body {
+	height: 100%;
+	width: 100%;
+}
+
+// Header
+core-header-panel {
+	height: 100%;
+	width: 100%;
+
+	.content {
+		height: 100%;
+	}
+}
+
 // Navigation
 nav {
 	a {
