--- a/_includes/polymer.html
+++ b/_includes/polymer.html
@@ -1,2 +1,3 @@
 {% assign polymer_cdn = 'https://www.polymer-project.org/0.5/components/' %}
 <script src="{{ polymer_cdn }}webcomponentsjs/webcomponents.js"></script>
+<link href="{{ polymer_cdn }}core-header-panel/core-header-panel.html" rel="import">
