--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,12 +5,16 @@ layout: compress
 <html{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
 {% include head.html %}
 <body>
-	{% include header.html %}
-	<div class="page-content">
-		<div class="wrapper">
-			{{ content }}
+	<core-header-panel>
+		<div class="core-header">
+			{% include header.html %}
 		</div>
-	</div>
-	{% include footer.html %}
+		<div class="content">
+			<div class="page-content wrapper">
+				{{ content }}
+			</div>
+			{% include footer.html %}
+		</div>
+	</core-header-panel>
 </body>
 </html>
