--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,35 @@
-<header class="site-header">
-	<div class="wrapper">
-		<a class="site-title" href="{{ site.locales[page.lang].homeurl | prepend: site.baseurl }}/" title="{% if site.locales[page.lang].title %}{{ site.locales[page.lang].title }}{% else %}{{ site.title }}{% endif %}">
-			{% if site.locales[page.lang].title %}
-				{{ site.locales[page.lang].title }}
-			{% else %}
-				{{ site.title }}
+<core-toolbar>
+	<a class="site-title" href="{{ site.locales[page.lang].homeurl | prepend: site.baseurl }}/" title="{% if site.locales[page.lang].title %}{{ site.locales[page.lang].title }}{% else %}{{ site.title }}{% endif %}">
+		{% if site.locales[page.lang].title %}
+			{{ site.locales[page.lang].title }}
+		{% else %}
+			{{ site.title }}
+		{% endif %}
+	</a>
+	<nav class="site-nav">
+		{% assign sorted_pages = (site.pages | where: 'nav', true | where: 'lang', page.lang | sort: 'position') %}
+		{% for p in sorted_pages %}
+			{% if page.title %}
+				<a class="page-link{% if page.title == p.title %} current{% endif %}" href="{{ p.url | prepend: site.baseurl }}" title="{{ p.title }}">{{ p.title }}</a>
 			{% endif %}
-		</a>
-		<nav class="site-nav">
-			{% assign sorted_pages = (site.pages | where: 'nav', true | where: 'lang', page.lang | sort: 'position') %}
-			{% for p in sorted_pages %}
-				{% if page.title %}
-					<a class="page-link{% if page.title == p.title %} current{% endif %}" href="{{ p.url | prepend: site.baseurl }}" title="{{ p.title }}">{{ p.title }}</a>
-				{% endif %}
-			{% endfor %}
-		</nav>
-		<nav id="language" class="lang">
-			{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
-			{% for p in lang_pages %}
-				{% if p.label %}
-					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
-						<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
-					</a>
-				{% endif %}
-			{% endfor %}
-			{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
-			{% for p in lang_posts %}
-				{% if p.label %}
-					<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
-						<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
-					</a>
-				{% endif %}
-			{% endfor %}
-		</nav>
-	</div>
-</header>
+		{% endfor %}
+	</nav>
+	<nav id="language" class="lang">
+		{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
+		{% for p in lang_pages %}
+			{% if p.label %}
+				<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
+					<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
+				</a>
+			{% endif %}
+		{% endfor %}
+		{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
+		{% for p in lang_posts %}
+			{% if p.label %}
+				<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
+					<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
+				</a>
+			{% endif %}
+		{% endfor %}
+	</nav>
+</core-toolbar>
