--- a/_includes/polymer.html
+++ b/_includes/polymer.html
@@ -1,3 +1,4 @@
 {% assign polymer_cdn = 'https://www.polymer-project.org/0.5/components/' %}
 <script src="{{ polymer_cdn }}webcomponentsjs/webcomponents.js"></script>
 <link href="{{ polymer_cdn }}core-header-panel/core-header-panel.html" rel="import">
+<link href="{{ polymer_cdn }}core-toolbar/core-toolbar.html" rel="import">
