--- a/_includes/polymer.html
+++ b/_includes/polymer.html
@@ -1,4 +1,8 @@
 {% assign polymer_cdn = 'https://www.polymer-project.org/0.5/components/' %}
 <script src="{{ polymer_cdn }}webcomponentsjs/webcomponents.js"></script>
+<link href="{{ polymer_cdn }}core-drawer-panel/core-drawer-panel.html" rel="import">
 <link href="{{ polymer_cdn }}core-header-panel/core-header-panel.html" rel="import">
+<link href="{{ polymer_cdn }}core-icon-button/core-icon-button.html" rel="import">
+<link href="{{ polymer_cdn }}core-item/core-item.html" rel="import">
+<link href="{{ polymer_cdn }}core-menu/core-menu.html" rel="import">
 <link href="{{ polymer_cdn }}core-toolbar/core-toolbar.html" rel="import">
