Avoid FOUC issues
The unresolved attribute prevents the page to display until all elements are
upgraded.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: compress
 <!DOCTYPE html>
 <html{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
 {% include head.html %}
-<body>
+<body unresolved>
 	<core-drawer-panel>
 		{% include drawer.html %}
 		<core-header-panel main>
