Add languages inside a menu button
This is just the structure, it needs a few changes to look good and be usable.

--- a/_includes/polymer.html
+++ b/_includes/polymer.html
@@ -6,3 +6,7 @@
 <link href="{{ polymer_cdn }}core-item/core-item.html" rel="import">
 <link href="{{ polymer_cdn }}core-menu/core-menu.html" rel="import">
 <link href="{{ polymer_cdn }}core-toolbar/core-toolbar.html" rel="import">
+<link href="{{ polymer_cdn }}paper-dropdown/paper-dropdown.html" rel="import">
+<link href="{{ polymer_cdn }}paper-icon-button/paper-icon-button.html" rel="import">
+<link href="{{ polymer_cdn }}paper-item/paper-item.html" rel="import">
+<link href="{{ polymer_cdn }}paper-menu-button/paper-menu-button.html" rel="import">
