--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,22 +1,31 @@
-<core-toolbar>
+<core-toolbar class="header">
 	<core-icon-button icon="menu" core-drawer-toggle></core-icon-button>
 	<div flex>{{ page.title }}</div>
-	<nav id="language" class="lang">
-		{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
-		{% for p in lang_pages %}
-			{% if p.label %}
-				<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
-					<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
-				</a>
-			{% endif %}
-		{% endfor %}
-		{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
-		{% for p in lang_posts %}
-			{% if p.label %}
-				<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
-					<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
-				</a>
-			{% endif %}
-		{% endfor %}
-	</nav>
+	<paper-menu-button id"language" class="lang">
+		<paper-icon-button icon="language" center></paper-icon-button>
+		<paper-dropdown class="dropdown" halign="right">
+			<core-menu class="menu">
+				{% assign lang_pages = (site.pages | where: 'label', page.label | sort: 'lang') %}
+				{% for p in lang_pages %}
+					{% if p.label %}
+						<paper-item>
+							<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
+								<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
+							</a>
+						</paper-item>
+					{% endif %}
+				{% endfor %}
+				{% assign lang_posts = (site.posts | where: 'label', page.label | sort: 'lang') %}
+				{% for p in lang_posts %}
+					{% if p.label %}
+						<paper-item>
+							<a href="{{ p.url | prepend: site.baseurl }}" hreflang="{{ p.lang }}"{% if page.lang == p.lang %} class="current"{% endif %} title="{{ p.title }} - {{ site.locales[p.lang].full_lang_name }}">
+								<abbr lang="{{ p.lang }}" title="{{ site.locales[p.lang].full_lang_name }}">{{ p.lang }}</abbr>
+							</a>
+						</paper-item>
+					{% endif %}
+				{% endfor %}
+			</core-menu>
+		</paper-dropdown>
+	</paper-menu-button>
 </core-toolbar>
