Use paper buttons instead of core buttons
The drawer toggle button was not updated.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <core-toolbar class="header">
-	<core-icon-button icon="menu" core-drawer-toggle></core-icon-button>
+	<paper-icon-button icon="menu" core-drawer-toggle></paper-icon-button>
 	<div flex>{{ page.title }}</div>
 	<paper-menu-button id"language" class="lang">
 		<paper-icon-button icon="language"></paper-icon-button>
