--- a/_includes/drawer.html
+++ b/_includes/drawer.html
@@ -1,4 +1,4 @@
-<core-header-panel drawer navigation flex>
+<core-header-panel drawer navigation flex mode="seamed">
 	<core-toolbar>
 		<a class="site-title" href="{{ site.locales[page.lang].homeurl | prepend: site.baseurl }}/" title="{% if site.locales[page.lang].title %}{{ site.locales[page.lang].title }}{% else %}{{ site.title }}{% endif %}">
 			{% if site.locales[page.lang].title %}
