--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,11 @@ core-toolbar {
 	line-height: 1em;
 }
 
+// Menus
+core-menu {
+	margin: 0;
+}
+
 // Code blocks
 .highlight {
 	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
