--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@ layout: compress
 <!DOCTYPE html>
 <html{% if page.lang %} lang="{{ page.lang }}"{% endif %}>
 {% include head.html %}
-<body unresolved>
+<body unresolved class="{% include color.html %}">
 	<core-drawer-panel>
 		{% include drawer.html %}
 		<core-header-panel main>
