--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -93,17 +93,21 @@ $grey: (
 );
 
 $colors: (
-	(".red", $red),
-	(".pink", $pink),
-	(".purple", $purple),
-	(".deep-purple", $deep-purple),
-	(".indigo", $indigo),
-	(".light-blue", $light-blue),
-	("", $grey),
+	("red", $red),
+	("pink", $pink),
+	("purple", $purple),
+	("deep-purple", $deep-purple),
+	("indigo", $indigo),
+	("light-blue", $light-blue),
+	("", $grey), // Default
 );
 
 
-@mixin color($modifier, $color) {
+@mixin drawer-background($name, $color) {
+	$modifier: "";
+	@if $name != "" {
+		$modifier: ".#{$name}-drawer-background";
+	}
 	body#{$modifier} {
 		[drawer], [drawer] core-toolbar {
 			color: nth($color, $light-primary);
@@ -118,5 +122,5 @@ $colors: (
 
 // Apply colors
 @each $c in $colors {
-	@include color(nth($c, 1), nth($c, 2));
+	@include drawer-background(nth($c, 1), nth($c, 2));
 }
