Style main header
This can also be customized for each page and post.

--- a/_includes/color.html
+++ b/_includes/color.html
@@ -10,3 +10,6 @@
 	{% endcomment %}
 	{{ page.color.drawer.background }}-drawer-header
 {% endif %}
+{% if page.color.main.header %}
+	{{ page.color.main.header }}-main-header
+{% endif %}
