Make header mode customizable
Possible values: standard, seamed, waterfall, waterfall-tall, scroll and cover.

For more information see
https://www.polymer-project.org/0.5/docs/elements/core-header-panel.html#core-header-panel.attributes.mode
and https://www.polymer-project.org/0.5/components/core-header-panel/demo.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@ layout: compress
 <body unresolved class="{% include color.html %}">
 	<core-drawer-panel>
 		{% include drawer.html %}
-		<core-header-panel main>
+		<core-header-panel main mode="{{ page.header.mode }}">
 			{% include header.html %}
 			<div class="content">
 				<div class="page-content wrapper">
