--- a/css/main.scss
+++ b/css/main.scss
@@ -5,6 +5,7 @@
 // Configuration
 $base-font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif;
 $base-font-size: 1em;
+$monospace-font-family: 'Source Code Pro', monospace;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
