--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,7 @@ body {
 	font-family: $base-font-family;
 	font-size: $base-font-size;
 	line-height: $base-line-height;
-	font-weight: 300;
+	font-weight: normal;
 	-webkit-text-size-adjust: 100%;
 }
 
