--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,12 @@ core-menu {
 	margin: 0;
 }
 
+// Page content
+.page-content {
+	margin: 0 auto;
+	max-width: 34em;
+}
+
 // Code blocks
 .highlight {
 	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
