Style main content text color
The main content color is customizable for each page or post. The main header
color is the main content color if it has not been specified.

--- a/_includes/color.html
+++ b/_includes/color.html
@@ -10,6 +10,15 @@
 	{% endcomment %}
 	{{ page.color.drawer.background }}-drawer-header
 {% endif %}
+{% if page.color.main.content %}
+	{{ page.color.main.content }}-main-content
+{% endif %}
 {% if page.color.main.header %}
 	{{ page.color.main.header }}-main-header
+{% else if page.color.main.content %}
+	{% comment %}
+		Use main content color if a specific color is not given for the main
+		header.
+	{% endcomment %}
+	{{ page.color.main.content }}-main-header
 {% endif %}
