--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -226,10 +226,26 @@ $colors: (
 	}
 }
 
+@mixin main-content($name, $color) {
+	$modifier: "";
+	@if $name != "" {
+		$modifier: ".#{$name}-main-content";
+	}
+	body#{$modifier} {
+		color: nth($color, $primary-text);
+	}
+}
+
 
 // Apply colors
 @each $c in $colors {
 	@include drawer-background(nth($c, 1), nth($c, 2));
 	@include drawer-header(nth($c, 1), nth($c, 2));
 	@include main-header(nth($c, 1), nth($c, 2));
+	@include main-content(nth($c, 1), nth($c, 2));
+}
+
+// Default colors
+body {
+	background-color: white;
 }
