Change page content max-width value to use spacing-unit variable
I forgot to use it.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,7 @@ core-menu {
 // Page content
 .page-content {
 	margin: 0 auto;
-	max-width: 34em;
+	max-width: $spacing-unit * 17;
 }
 
 // Code blocks
