Change page content padding
It was too much.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -11,7 +11,7 @@ core-menu {
 // Page content
 .page-content {
 	margin: 0 auto;
-	padding: $spacing-unit;
+	padding: $spacing-unit * 0.1;
 	max-width: $spacing-unit * 17;
 }
 
