--- a/css/main.scss
+++ b/css/main.scss
@@ -4,12 +4,20 @@
 
 // Configuration
 $base-font-family: 'Source Sans Pro', sans-serif;
-$base-font-size: 1.2em;
+$base-font-size: 1em;
 $monospace-font-family: 'Source Code Pro', monospace;
 $small-font-size: $base-font-size * 0.875;
 $base-line-height: 1.5;
 
 $spacing-unit: 2em;
+
+$on-laptop: 800px;
+
+@mixin media-query($device) {
+	@media screen and (min-width: $device) {
+		@content;
+	}
+}
 
 // Import partials
 @import
