--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -233,7 +233,10 @@ $colors: (
 	}
 	body#{$modifier} {
 		color: nth($color, $primary-text);
-		h1, h2, h3, h4, h5, h6, {
+		h1 {
+			color: nth($color, $dark-primary);
+		}
+		h2, h3, h4, h5, h6, {
 			color: nth($color, $secondary-text);
 		}
 	}
