Wrap blockquote tags with paper-shadow
Bring the material!

--- a/_includes/polymer.html
+++ b/_includes/polymer.html
@@ -8,3 +8,4 @@
 <link href="{{ polymer_cdn }}paper-icon-button/paper-icon-button.html" rel="import">
 <link href="{{ polymer_cdn }}paper-item/paper-item.html" rel="import">
 <link href="{{ polymer_cdn }}paper-menu-button/paper-menu-button.html" rel="import">
+<link href="{{ polymer_cdn }}paper-shadow/paper-shadow.html" rel="import">
