--- a/_layouts/compress.html
+++ b/_layouts/compress.html
@@ -5,6 +5,6 @@
 {% if temp3.size == 2 %}
 <pre>{{ temp3.first | newline_to_br }}</pre>
 {% endif %}
-{{ temp3.last | split: ' ' | join: ' ' }}
+{{ temp3.last | split: ' ' | join: ' ' | replace: '<blockquote>', '<paper-shadow z="1"><blockquote>' | replace: '</blockquote>', '</blockquote></paper-shadow>' }}
 {% endfor %}
 {% endcapture %}{{ compress | strip_newlines }}
