Change note's background color
I think the light primary color looks better, I tried with the primary but looks
too strong.

--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -349,6 +349,9 @@ $colors: (
 		a:hover, a:active {
 			color: nth($color, $divider);
 		}
+		paper-shadow {
+			background-color: nth($color, $light-primary);
+		}
 	}
 }
 
