--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -35,7 +35,7 @@ h6 { font-size: $base-font-size * 1.1; }
 	padding: $spacing-unit * 0.4 $spacing-unit * 0.6 $spacing-unit / 12;
 	border-radius: $spacing-unit / 12;
 	margin: $spacing-unit / 12;
-	overflow-x: auto;
+	word-wrap: break-word;
 }
 
 // Notes
