Style hover and active states for drawer paper items
Now the user can really be sure what link is actually selected.

--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -298,6 +298,10 @@ $colors: (
 		[drawer] a {
 			color: nth($color, $text-primary);
 		}
+		[drawer] paper-item:hover, [drawer] paper-item:active {
+			color: nth($color, $text-primary);
+			background-color: nth($color, $primary);
+		}
 	}
 }
 
