Change black palette primary and light primary colors
This lightens the black theme and allows the drawer's hover effect to be seen.

--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -251,8 +251,8 @@ $white: (
 // Black
 $black: (
 	#000000, // Dark primary
-	#000000, // Primary
-	#000000, // Light primary
+	#222222, // Primary
+	#DDDDDD, // Light primary
 	#FFFFFF, // Text primary
 	#000000, // Accent
 	#212121, // Primary text
