Add site footer padding
Now the footer is centered just like the page content.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,7 +9,7 @@ core-menu {
 }
 
 // Page content
-.page-content {
+.page-content, .site-footer {
 	margin: 0 auto;
 	padding: $spacing-unit * 0.1;
 	max-width: $spacing-unit * 17;
